--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
 
      <!-- HOME -->
      <section id="home" data-stellar-background-ratio="0.5">
-          <div class="container">
-               <div class="row">
-               </div>
+          <div id="home-cta">
+               <img src="./images/hero-text.png">
           </div>
      </section>
 
@@ -81,70 +80,17 @@
 
                     <div class="col-md-12 col-sm-12">
                          <div class="section-title">
-                              <h1>What you get</h1>
+                              <h1>Despre noi</h1>
                          </div>
                     </div>
 
                     <div class="col-md-6 col-sm-6">
-                         <ul class="nav nav-tabs" role="tablist">
-                              <li class="active"><a href="#tab01" aria-controls="tab01" role="tab"
-                                        data-toggle="tab">Responsive</a></li>
-
-                              <li><a href="#tab02" aria-controls="tab02" role="tab" data-toggle="tab">Mobile</a></li>
-
-                              <li><a href="#tab03" aria-controls="tab03" role="tab" data-toggle="tab">Support</a></li>
-                         </ul>
-
-                         <div class="tab-content">
-                              <div class="tab-pane active" id="tab01" role="tabpanel">
-                                   <div class="tab-pane-item">
-                                        <h2>Minimal Design</h2>
-                                        <p>Nam feugiat a ante sollicitudin luctus. Quisque eget placerat massa. Ut quis
-                                             ligula ornare, pellentesque velit eget, vestibulum est. Donec pretium
-                                             tristique elit eget sodales. Pellentesque posuere.</p>
-                                   </div>
-                                   <div class="tab-pane-item">
-                                        <h2>Easy to use</h2>
-                                        <p>Aliquam massa massa, consectetur non mattis fringilla, sodales ac turpis.
-                                             Morbi ac felis sagittis, faucibus mauris vitae, placerat mauris.</p>
-                                   </div>
-                              </div>
-
-
-                              <div class="tab-pane" id="tab02" role="tabpanel">
-                                   <div class="tab-pane-item">
-                                        <h2>Compatible Browsers</h2>
-                                        <p>Nam maximus elit a metus luctus, a faucibus magna mattis. Ut malesuada
-                                             viverra iaculis. Nunc euismod sit amet neque a tincidunt.</p>
-                                   </div>
-                                   <div class="tab-pane-item">
-                                        <h2>User Friendly</h2>
-                                        <p>Maecenas maximus velit lorem, quis pharetra turpis fringilla id. Vestibulum
-                                             tempor facilisis efficitur. Sed nec nisi sit amet nibh pellentesque
-                                             elementum.</p>
-                                   </div>
-                                   <div class="tab-pane-item">
-                                        <h2>HTML5 & CSS3</h2>
-                                        <p>In viverra ipsum ornare sapien rhoncus ullamcorper. Vivamus vitae risus ac mi
-                                             vehicula sagittis. Nulla dictum magna sit amet pharetra aliquam.</p>
-                                   </div>
-                              </div>
-
-                              <div class="tab-pane" id="tab03" role="tabpanel">
-                                   <div class="tab-pane-item">
-                                        <h2>Quick Support</h2>
-                                        <p>Mauris rutrum est at fringilla pulvinar. Nam ligula urna, lobortis non
-                                             scelerisque vel, molestie eu massa. Nullam mattis elit at tortor accumsan.
-                                        </p>
-                                   </div>
-                                   <div class="tab-pane-item">
-                                        <h2>Managed Stuffs</h2>
-                                        <p>Quisque ullamcorper sem quis sapien cursus efficitur. Sed id sodales ipsum.
-                                             Morbi eleifend tempus erat sit amet vehicula. Nulla at posuere tellus, non
-                                             mattis erat. Nulla id massa gravida.</p>
-                                   </div>
-                              </div>
-                         </div>
+                         <p>Proiectul SkipToTheFuture, este un proiect care își propune să le ofere elevilor din Sibiu, șansa de a vedea care este procesul de dezvoltare a soluțiilor software și hardware din perspectiva unui inginer.
+                              Participanții vor afla aceste lucruri de la niște oameni care și-au dedicat timpul în realizarea unei cariere în acest domeniu. Dorința noastră este de a le arăta un posibil viitor; a ceea ce vor face dacă aleg să urmeze această carieră.
+                              Proiectul se adresează atât celor nehotărâți, cât și celor care sunt curioși referitor la ceea ce ar însemna o astfel de meserie.
+                              În prima fază, elevii vor avea ocazia să afle mai multe informaţii despre diferite companii implicate în acest proiect. Acestea îşi vor prezenta firma şi vor fi acolo pentru a lămuri toate neclarităţile într-o sesiune de Q&A (întrebări și răspunsuri).
+                              În faza a doua, în funcţie de compania aleasă, elevii vor avea şansa să participe la dezvoltarea unui proiect aflat în producţie.
+                              Toate aceste etape, vor avea ca scop final, să-i ajute pe elevii să găsească un răspuns mai bun la marea întrebare: “Ce facultate ar trebui să urmez?”</p>
 
                     </div>
 
@@ -162,7 +108,7 @@
      <!-- ABOUT -->
      <section id="about" data-stellar-background-ratio="0.5">
           <div class="container">
-               <div class="row">
+               <div class="row companies">
 
                     <div class="col-md-offset-3 col-md-6 col-sm-12">
                          <div class="section-title">
@@ -184,10 +130,11 @@
                     <a target="_blank" href="https://www.continental.com/ro-ro">
                          <div class="col-md-4 col-sm-4">
                               <div class="team-thumb">
-                                   <div class="team-info team-thumb-down">
+                                   <img src="images/logo-conti-web.png" class="img-responsive" alt="Continental">
+
+                                   <div class="team-info team-thumb-up">
                                         <p>Continental dezvoltă tehnologii și servicii de pionierat pentru mobilitatea durabilă și conectată a oamenilor și a bunurilor lor</p>
                                    </div>
-                                   <img src="images/logo-conti-web.png" class="img-responsive" alt="Continental">
                               </div>
                          </div>
                     </a>
@@ -213,19 +160,14 @@
      <section id="testimonial" data-stellar-background-ratio="0.5">
           <div class="container">
                <div class="row">
-
-                    <div class="col-md-6 col-sm-12">
-                         <div class="testimonial-image"></div>
-                    </div>
-
-                    <div class="col-md-6 col-sm-12">
+                    <div class="col-md-12 col-sm-12">
                          <div class="testimonial-info">
 
                               <div class="section-title">
                                    <h1>Testimonials</h1>
                               </div>
 
-                              <div class="owl-carousel owl-theme">
+                              <div class="owl-carousel owl-t     me">
                                    <div class="item">
                                         <h3>A fost o experiență foarte placută. Chiar lucrez în domeniu după 5 ani. Dacă ar fii să dau un feedback, aș zice că mi-a plăcut mult mediul de lucru și oamenii. 
                                              Chiar aș face internshipul mai lung pentru a învăța mai multe. Also la Skip To The Future e prima oară când am auzit de metodologii agile.
@@ -270,11 +212,11 @@
 
                     <div class="col-md-12 col-sm-12">
                          <div class="section-title">
-                              <h1>Choose any plan</h1>
+                              <h1>Inregistreaza-te</h1>
                          </div>
                     </div>
 
-                    <div class="col-md-4 col-sm-6">
+                    <div class="col-md-6 col-sm-6">
                          <div class="pricing-thumb">
                               <div class="pricing-title">
                                    <h2>Student</h2>
@@ -291,27 +233,8 @@
                               </div>
                          </div>
                     </div>
-
-                    <div class="col-md-4 col-sm-6">
-                         <div class="pricing-thumb">
-                              <div class="pricing-title">
-                                   <h2>Business</h2>
-                              </div>
-                              <div class="pricing-info">
-                                   <p>50 Responsive Designs</p>
-                                   <p>30 Dashboards</p>
-                                   <p>2 TB Storage</p>
-                                   <p>12 TB Bandwidth</p>
-                                   <p>15-minute Support</p>
-                              </div>
-                              <div class="pricing-bottom">
-                                   <span class="pricing-dollar">$350/mo</span>
-                                   <a href="#" class="section-btn pricing-btn">Register now</a>
-                              </div>
-                         </div>
-                    </div>
-
-                    <div class="col-md-4 col-sm-6">
+          
+                    <div class="col-md-6 col-sm-6">
                          <div class="pricing-thumb">
                               <div class="pricing-title">
                                    <h2>Professional</h2>
@@ -324,7 +247,6 @@
                                    <p>1-minute Support</p>
                               </div>
                               <div class="pricing-bottom">
-                                   <span class="pricing-dollar">$550/mo</span>
                                    <a href="#" class="section-btn pricing-btn">Register now</a>
                               </div>
                          </div>
@@ -373,14 +295,13 @@
 
                     <div class="copyright-text col-md-12 col-sm-12">
                          <div class="col-md-6 col-sm-6">
-                              <p>Contact: support@skiptothefuture.com</p>
+                              <p>Email:  support@skiptothefuture.com</p>
                          </div>
 
                          <div class="col-md-6 col-sm-6">
                               <ul class="social-icon">
                                    <li><a target="_blank" href="https://www.facebook.com/skiptothefuture/"
                                              class="fa fa-facebook-square" attr="facebook icon"></a></li>
-                                   <li><a href="#" class="fa fa-twitter"></a></li>
                                    <li><a target="_blank" href="https://www.instagram.com/skip.to.the.future/"
                                              class="fa fa-instagram"></a></li>
                               </ul>
