Remove unused resoruces and text&design changes

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                         <li><a href="#feature" class="smoothScroll">Features</a></li>
-                         <li><a href="#about" class="smoothScroll">About us</a></li>
-                         <li><a href="#testimonial" class="smoothScroll">Testimonials</a></li>
-                         <li><a href="#pricing" class="smoothScroll">Pricing</a></li>
+                         <li><a href="#feature" class="smoothScroll">Despre noi</a></li>
+                         <li><a href="#about" class="smoothScroll">Parteneri</a></li>
+                         <li><a href="#testimonial" class="smoothScroll">Recenzii</a></li>
+                         <li><a href="#pricing" class="smoothScroll">Inregistrare</a></li>
                          <li><a href="#contact" class="smoothScroll">Contact</a></li>
                     </ul>
                     <!-- <ul class="nav navbar-nav navbar-right">
@@ -84,21 +84,23 @@
                          </div>
                     </div>
 
-                    <div class="col-md-6 col-sm-6">
-                         <p>Proiectul SkipToTheFuture, este un proiect care își propune să le ofere elevilor din Sibiu, șansa de a vedea care este procesul de dezvoltare a soluțiilor software și hardware din perspectiva unui inginer.
+                    <div class="col-md-12 col-sm-6">
+                         <p>  Proiectul SkipToTheFuture, este un proiect care își propune să le ofere elevilor din Sibiu, șansa de a vedea care este procesul de dezvoltare a soluțiilor software și hardware din perspectiva unui inginer.
                               Participanții vor afla aceste lucruri de la niște oameni care și-au dedicat timpul în realizarea unei cariere în acest domeniu. Dorința noastră este de a le arăta un posibil viitor; a ceea ce vor face dacă aleg să urmeze această carieră.
                               Proiectul se adresează atât celor nehotărâți, cât și celor care sunt curioși referitor la ceea ce ar însemna o astfel de meserie.
                               În prima fază, elevii vor avea ocazia să afle mai multe informaţii despre diferite companii implicate în acest proiect. Acestea îşi vor prezenta firma şi vor fi acolo pentru a lămuri toate neclarităţile într-o sesiune de Q&A (întrebări și răspunsuri).
                               În faza a doua, în funcţie de compania aleasă, elevii vor avea şansa să participe la dezvoltarea unui proiect aflat în producţie.
                               Toate aceste etape, vor avea ca scop final, să-i ajute pe elevii să găsească un răspuns mai bun la marea întrebare: “Ce facultate ar trebui să urmez?”</p>
 
+
+                         <div class="img-responsive timeline-image"></div>
                     </div>
 
-                    <div class="col-md-6 col-sm-6">
+                    <!-- <div class="col-md-6 col-sm-6">
                          <div class="feature-image">
-                              <img src="images/feature-mockup.png" class="img-responsive" alt="Thin Laptop">
+                              <img src="images/timelinemobile4-01.png" class="img-responsive" alt="Thin Laptop">
                          </div>
-                    </div>
+                    </div> -->
 
                </div>
           </div>
@@ -112,7 +114,7 @@
 
                     <div class="col-md-offset-3 col-md-6 col-sm-12">
                          <div class="section-title">
-                              <h1>Powered by</h1>
+                              <h1>Parteneri</h1>
                          </div>
                     </div>
                     <a target="_blank" href="https://www.agilefreaks.com/">
@@ -173,17 +175,8 @@
                                              Chiar aș face internshipul mai lung pentru a învăța mai multe. Also la Skip To The Future e prima oară când am auzit de metodologii agile.
                                         </h3>
                                         <div class="testimonial-item">
-                                             <img src="images/tst-image1.jpg" class="img-responsive" alt="Michael">
+                                             <img src="images/boy1-01.png" class="img-responsive" alt="Tudor">
                                              <h4>Tudor T.</h4>
-                                        </div>
-                                   </div>
-
-                                   <div class="item">
-                                        <h3>A fost o experiență ok, face parte din formarea mea profesională de “programator în progres” de acum. În prezent sunt student în anul 3 la Automatica si Calculatoare in Cluj, specializarea Calculatoar.
-                                             Momentan lucrez la NTT Data pe SAP ABAP, dar am făcut alte internship-uri și pe Automation Testing în Python și Android Development.</h3>
-                                        <div class="testimonial-item">
-                                             <img src="images/tst-image2.jpg" class="img-responsive" alt="Sofia">
-                                             <h4>Adi F.</h4>
                                         </div>
                                    </div>
 
@@ -191,8 +184,35 @@
                                         <h3>A fost interesant deoarece a fost primul meu contact cu o firmă IT. Acum sunt studentă la Universitatea Tehnică din Viena, la facultatatea de Informartică - profilul Inginerie Software și lucrez tot în domeniu ca Inginer proiect pe partea de networks și virtualizare.
                                              Pot să subliniez faptul că mediul și oamenii de la Agile Freaks au fost foarte plăcuți. Eu m-am simțit bine în perioada aceea și mi-aș fi dorit să dureze mai mult.</h3>
                                         <div class="testimonial-item">
-                                             <img src="images/tst-image3.jpg" class="img-responsive" alt="Monica">
+                                             <img src="images/fata1-01.png" class="img-responsive" alt="Iulia">
                                              <h4>Iulia R.</h4>
+                                        </div>
+                                   </div>
+
+                                   <div class="item">
+                                        <h3>A fost o experiență ok, face parte din formarea mea profesională de “programator în progres” de acum. În prezent sunt student în anul 3 la Automatica si Calculatoare in Cluj, specializarea Calculatoar.
+                                             Momentan lucrez la NTT Data pe SAP ABAP, dar am făcut alte internship-uri și pe Automation Testing în Python și Android Development.</h3>
+                                        <div class="testimonial-item">
+                                             <img src="images/boy2-01.png" class="img-responsive" alt="Adi">
+                                             <h4>Adi F.</h4>
+                                        </div>
+                                   </div>
+
+                                   <div class="item">
+                                        <h3>Mă bucur că vreți să reluați proiectul. Sincer, aceste trei zile petrecute cu voi m-au motivat mai tare să urmez o carieră în IT așa că înainte de BAC și în acea vară am lucrat ca și freelancer. De asemenea, în clasa a 12-a am luat locul doi pe țară la olimpiada de C#. Am urmat Facultatea de Informatică la UBB Cluj, în același timp fiind și student pentru un an la Academy+Plus. În prezent, sunt la ComplyAdvantage unde lucrez cu Scala și Apache Flink în general.
+                                             Vreau să vă mulțumesc pentru că m-ați ales să fiu parte din proiect și eu sfătuiesc să îl reluați pentru că vă puteți pune amprenta pe cariera multor elevi sibieni.</h3>
+                                        <div class="testimonial-item">
+                                             <img src="images/fata2-01.png" class="img-responsive" alt="Ana">
+                                             <h4>Ana P.</h4>
+                                        </div>
+                                   </div>
+
+                                   <div class="item">
+                                        <h3>Am participat la Skip to the Future la finalul clasei a 12-a când eram deja admisă la Inginerie. Dar asta nu înseamnă că nu m-a ajutat, ba dimpotrivă, m-a făcut să îmi dau seama că alegerea pe care am făcut-o alegând să urmez Ingineria a fost una bună și m-am convins că nu o să regret asta. 
+                                             Și pe lângă asta, atunci am fost la Continental și am văzut cum se lucrează acolo, iar acum am ajuns să lucrez și eu tot la Continental.</h3>
+                                        <div class="testimonial-item">
+                                             <img src="images/boy3-01.png" class="img-responsive" alt="Alex">
+                                             <h4>Alex V.</h4>
                                         </div>
                                    </div>
                               </div>
@@ -219,17 +239,15 @@
                     <div class="col-md-6 col-sm-6">
                          <div class="pricing-thumb">
                               <div class="pricing-title">
-                                   <h2>Student</h2>
+                                   <h2>Elev</h2>
                               </div>
                               <div class="pricing-info">
-                                   <p>20 Responsive Designs</p>
-                                   <p>10 Dashboards</p>
-                                   <p>1 TB Storage</p>
-                                   <p>6 TB Bandwidth</p>
-                                   <p>24-hour Support</p>
+                                   <p>Inscrie-te acum si vei beneficia de cea mai frumoasa experienta din viata ta de elev. Vei putea lucra cu persoane cu adevarat profesioniste
+                                        la aplicatii folosite in lumea reala. Nu rata aceasta ocazie, alatura -te acum miilor de studenti.
+                                   </p>
                               </div>
                               <div class="pricing-bottom">
-                                   <a href="#" class="section-btn pricing-btn">Register now</a>
+                                   <a href="#" class="section-btn pricing-btn">Aplica acum</a>
                               </div>
                          </div>
                     </div>
@@ -237,17 +255,15 @@
                     <div class="col-md-6 col-sm-6">
                          <div class="pricing-thumb">
                               <div class="pricing-title">
-                                   <h2>Professional</h2>
+                                   <h2>Partener</h2>
                               </div>
                               <div class="pricing-info">
-                                   <p>100 Responsive Designs</p>
-                                   <p>60 Dashboards</p>
-                                   <p>5 TB Storage</p>
-                                   <p>25 TB Bandwidth</p>
-                                   <p>1-minute Support</p>
+                                   <p>Stiim ca sunt vremuri grele din puct de vedere al recrutarii acum in Sibiu. Din puctul nostru de vedere cea mai buna varianta este aceasta.
+                                        I-ai de mici si bucura-te de ei cand sunt mari. Ce mai astepti? Aplica acum si arata-le copiilor ce poate face firma ta.
+                                   </p>
                               </div>
                               <div class="pricing-bottom">
-                                   <a href="#" class="section-btn pricing-btn">Register now</a>
+                                   <a href="#" class="section-btn pricing-btn">Aplica acum</a>
                               </div>
                          </div>
                     </div>
