Add new dark version for nav bar logo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                          <li><a href="#feature" class="smoothScroll">Despre noi</a></li>
                          <li><a href="#about" class="smoothScroll">Parteneri</a></li>
                          <li><a href="#testimonial" class="smoothScroll">Recenzii</a></li>
-                         <li><a href="#pricing" class="smoothScroll">Inregistrare</a></li>
+                         <li><a href="#pricing" class="smoothScroll">Înregistrare</a></li>
                          <li><a href="#contact" class="smoothScroll">Contact</a></li>
                     </ul>
                     <!-- <ul class="nav navbar-nav navbar-right">
