--- a/index.html
+++ b/index.html
@@ -56,9 +56,6 @@
                          <li><a href="#pricing" class="smoothScroll">Înregistrare</a></li>
                          <li><a href="#contact" class="smoothScroll">Contact</a></li>
                     </ul>
-                    <!-- <ul class="nav navbar-nav navbar-right">
-                         <li><a href="#">Say hello - <span>info@soft.co</span></a></li>
-                    </ul> -->
                </div>
 
           </div>
@@ -85,16 +82,21 @@
                     </div>
 
                     <div class="col-md-12 col-sm-6">
-                         <p>  Proiectul SkipToTheFuture, este un proiect care își propune să le ofere elevilor din Sibiu, șansa de a vedea care este procesul de dezvoltare a soluțiilor software și hardware din perspectiva unui inginer.
-                              Participanții vor afla aceste lucruri de la niște oameni care și-au dedicat timpul în realizarea unei cariere în acest domeniu. Dorința noastră este de a le arăta un posibil viitor; a ceea ce vor face dacă aleg să urmeze această carieră.
-                              Proiectul se adresează atât celor nehotărâți, cât și celor care sunt curioși referitor la ceea ce ar însemna o astfel de meserie.
-                              În prima fază, elevii vor avea ocazia să afle mai multe informaţii despre diferite companii implicate în acest proiect. Acestea îşi vor prezenta firma şi vor fi acolo pentru a lămuri toate neclarităţile într-o sesiune de Q&A (întrebări și răspunsuri).
-                              În faza a doua, în funcţie de compania aleasă, elevii vor avea şansa să participe la dezvoltarea unui proiect aflat în producţie.
-                              Toate aceste etape, vor avea ca scop final, să-i ajute pe elevii să găsească un răspuns mai bun la marea întrebare: “Ce facultate ar trebui să urmez?”</p>
-
-
-                         <div class="img-responsive timeline-image"></div>
-                    </div>
+                         <p>  Proiectul Skip To The Future, este un proiect care își propune să le ofere elevilor din Sibiu șansa de a experimenta procesul de dezvoltare a soluțiilor software și hardware din perspectiva unui inginer.
+                              Participanții vor afla aceste lucruri de la persoane care și-au dedicat timpul în realizarea unei cariere în acest domeniu. Dorința noastră este de a le arăta un posibil viitor; a ceea ce vor face dacă aleg să urmeze această carieră.</br>
+                         </br>
+                              Proiectul se adresează atât celor nehotărâți, cât și celor care sunt curioși referitor la ceea ce ar însemna o astfel de meserie.</br> 
+                              În prima fază, elevii vor avea ocazia să afle mai multe informaţii despre diferite companii implicate în acest proiect. Acestea îşi vor prezenta firma şi vor lămuri toate neclarităţile într-o sesiune de Q&A.</br>
+                              În faza a doua, în funcţie de compania aleasă, elevii vor avea şansa să participe la dezvoltarea unui proiect aflat în producţie.</br>
+                              Toate aceste etape, vor avea ca scop final să-i ghideze pe elevii să găsească un răspuns mai bun la marea întrebare: “Ce facultate ar trebui să urmez?”</p>
+                            
+                              <div class="col-md-12 col-sm-12">
+                                   <div class="section-title">
+                                        <h1>Etapele proiectului</h1>
+                                   </div>
+                              </div>
+                              <div class="img-responsive timeline-image"></div>
+                    </div> 
 
                     <!-- <div class="col-md-6 col-sm-6">
                          <div class="feature-image">
@@ -122,8 +124,8 @@
                               <div class="team-thumb">
                                    <img src="images/web-logo-agile-full.png" class="img-responsive" alt="AgileFreaks">
                                    <div class="team-info team-thumb-up">
-                                        <p>Construim instrumente bine lucrate, care rezulta intr-o placere de a le folosi, 
-                                             astfel incat clientii nostri isi pot dezvolta afacerea intr-un mod sustenabil. 
+                                        <p>Construim instrumente bine lucrate, care rezultă într-o plăcere de a le folosi, 
+                                             astfel încât clienții noștri își pot dezvolta afacerea într-un mod sustenabil. 
                                         </p>
                                    </div>
                               </div>
@@ -135,7 +137,7 @@
                                    <img src="images/logo-conti-web.png" class="img-responsive" alt="Continental">
 
                                    <div class="team-info team-thumb-up">
-                                        <p>Continental dezvoltă tehnologii și servicii de pionierat pentru mobilitatea durabilă și conectată a oamenilor și a bunurilor lor</p>
+                                        <p>Continental dezvoltă tehnologii și servicii de pionierat pentru mobilitatea durabilă și conectată a oamenilor și a bunurilor lor.</p>
                                    </div>
                               </div>
                          </div>
@@ -232,7 +234,7 @@
 
                     <div class="col-md-12 col-sm-12">
                          <div class="section-title">
-                              <h1>Inregistreaza-te</h1>
+                              <h1>Înregistrează-te</h1>
                          </div>
                     </div>
 
@@ -242,12 +244,12 @@
                                    <h2>Elev</h2>
                               </div>
                               <div class="pricing-info">
-                                   <p>Inscrie-te acum si vei beneficia de cea mai frumoasa experienta din viata ta de elev. Vei putea lucra cu persoane cu adevarat profesioniste
-                                        la aplicatii folosite in lumea reala. Nu rata aceasta ocazie, alatura -te acum miilor de studenti.
+                                   <p>Înscrie-te acum și vei beneficia de cea mai frumoasă experiență din viața ta de elev. Vei putea lucra cu persoane cu adevărat profesioniste
+                                        la produse folosite în lumea reală. Nu rata această ocazie, alătură-te acum.
                                    </p>
                               </div>
                               <div class="pricing-bottom">
-                                   <a href="#" class="section-btn pricing-btn">Aplica acum</a>
+                                   <a href="#" class="section-btn pricing-btn">Aplică acum</a>
                               </div>
                          </div>
                     </div>
@@ -258,12 +260,12 @@
                                    <h2>Partener</h2>
                               </div>
                               <div class="pricing-info">
-                                   <p>Stiim ca sunt vremuri grele din puct de vedere al recrutarii acum in Sibiu. Din puctul nostru de vedere cea mai buna varianta este aceasta.
-                                        I-ai de mici si bucura-te de ei cand sunt mari. Ce mai astepti? Aplica acum si arata-le copiilor ce poate face firma ta.
+                                   <p>Știm că sunt vremuri grele din puct de vedere al recrutării în Sibiu. Din puctul nostru de vedere cea mai bună variantă să investim cât mai devreme în educația copiilor, doar astfel putem construi un viitor sustenabil.
+                                        Aplică acum și arată-le elevilor ce face compania ta.
                                    </p>
                               </div>
                               <div class="pricing-bottom">
-                                   <a href="#" class="section-btn pricing-btn">Aplica acum</a>
+                                   <a href="#" class="section-btn pricing-btn">Aplică acum</a>
                               </div>
                          </div>
                     </div>
@@ -272,38 +274,6 @@
           </div>
      </section>
 
-
-     <!-- CONTACT
-     <section id="contact" data-stellar-background-ratio="0.5">
-          <div class="container">
-               <div class="row">
-
-                    <div class="col-md-offset-1 col-md-10 col-sm-12">
-                         <form id="contact-form" role="form" action="" method="post">
-                              <div class="section-title">
-                                   <h1>Say hello to us</h1>
-                              </div>
-
-                              <div class="col-md-4 col-sm-4">
-                                   <input type="text" class="form-control" placeholder="Full name" name="name" required="">
-                              </div>
-                              <div class="col-md-4 col-sm-4">
-                                   <input type="email" class="form-control" placeholder="Email address" name="email" required="">
-                              </div>
-                              <div class="col-md-4 col-sm-4">
-                                   <input type="submit" class="form-control" name="send message" value="Send Message">
-                              </div>
-                              <div class="col-md-12 col-sm-12">
-                                   <textarea class="form-control" rows="8" placeholder="Your message" name="message" required=""></textarea>
-                              </div>
-                         </form>
-                    </div>
-
-               </div>
-          </div>
-     </section>        -->
-
-
      <!-- FOOTER -->
      <footer id="contact" data-stellar-background-ratio="0.5">
           <div class="container">
@@ -311,7 +281,7 @@
 
                     <div class="copyright-text col-md-12 col-sm-12">
                          <div class="col-md-6 col-sm-6">
-                              <p>Email:  support@skiptothefuture.com</p>
+                              <p>Email: <a href="mailto:marketing@skiptothefuture.com" target="_top">marketing@skiptothefuture.com</a> </p>
                          </div>
 
                          <div class="col-md-6 col-sm-6">
