--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                                    <h2>Partener</h2>
                               </div>
                               <div class="pricing-info">
-                                   <p>Știm că sunt vremuri grele din puct de vedere al recrutării în Sibiu. Din puctul nostru de vedere cea mai bună variantă să investim cât mai devreme în educația copiilor, doar astfel putem construi un viitor sustenabil.
+                                   <p>Știm că sunt vremuri grele din puct de vedere al recrutării în Sibiu. Din puctul nostru de vedere cea mai bună variantă ar fi să investim cât mai devreme în educația copiilor, doar astfel putem construi un viitor sustenabil.
                                         Aplică acum și arată-le elevilor ce face compania ta.
                                    </p>
                               </div>
